deployments/k8s/istio-mode/destinationrule-biz.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nssaa-biz
  namespace: nssaa
spec:
  host: nssaa-biz
  trafficPolicy:
    connectionPool:
      http:
        h2UpgradePolicy: UPGRADE
        http1MaxPendingRequests: 100
        http2MaxRequests: 1000
        maxRequestsPerConnection: 100
    loadBalancer:
      simple: LEAST_REQUEST
      localityLbSetting:
        enabled: true
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 30s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
    tls:
      mode: ISTIO_MUTUAL
